# karp-backend-v5

./: .bumpversion.cfg  .coveragerc  .gitignore  .htaccess  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  backend.wsgi  cli.py  codecov.yml  create_large_lex.py  export_bugg.md  offline.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run.py  run_app.py  setup.cfg  setup.py  workspace.toml
.github/workflows/: build-publish.yml  build.yml  ci.yml  codeql-analysis.yml  pythonpackage.yml
app/: __init__.py  config.py
app/api/edit/: routes.py
app/api/history/: __init__.py  routes.py
app/search/: routes.py  searching.py
bak/: requirements.txt  requirements3.txt
bases/karp/karp_v4_flask_api/: __init__.py  backend.py  flaskhelper.py
bases/karp/karp_v5_flask_api/: __init__.py
components/karp/autocomplete_query/: __init__.py  core.py
components/karp/config/: __init__.py  configmanager.py
components/karp/server/: auth.py  checkdbhistory.py  idgenerator.py  log.py  searching.py  suggestions.py  update.py  update_local.py
components/karp/user/: __init__.py  core.py
config/: config.json  config.json.example  lexiconconf.json  lexiconconf.json.example  lexiconconf.json.panacea  modes.json  modes.json.example  modes.json.panacea
config/mappings/: fieldmappings_default.json  fieldmappings_panacea.json.panacea  mappingconf_panacea.json.panacea
data/panacea/: PAN_metadata_Glossary DE-EN_prob-Authors.txt  PAN_metadata_Glossary DE-EN_prob.html  WP52-LtXfr-ProbLex-deen.txt  convert_panacea.py  readme_bilingual_glossary_prob_DE-EN.txt
doc/: HowToMoveAResource.md  about.tex  advanced_setup.md  manual.md  wsauth_manual.md
karp5/: __init__.py  backend.py  core.py  errors.py  instance_info.py  models.py
karp5/application/actions/: mode_actions.py
karp5/cli/: __init__.py  create_metadata.py  getmapping.py  upload_offline.py
karp5/config/: __init__.py  config.py  configmanager.py  errors.py
karp5/config/ext/: ext_src.py
karp5/context/auth/: __init__.py  dummy_auth.py  std_auth.py
karp5/dbhandler/: dbhandler.py  emailsender.py
karp5/document/: autoupdates.py  doc_converter.py
karp5/domain/model/: mode.py
karp5/domain/models/: user.py
karp5/domain/services/: search.py  search_service.py
karp5/html/: index_dokumentation.html
karp5/infrastructure/: json_file_mode_repository.py
karp5/infrastructure/kernel/: config.py
karp5/server/: auth.py  checkdbhistory.py  extensions.py  idgenerator.py  searching.py  suggestions.py  update.py
karp5/services/: authentication_service.py
karp5/tests/: _test_config.py  auth_server.py  common_fixtures.py  conftest.py  test_factory.py  test_index.py  util.py
karp5/util/: __init__.py  debug.py  text.py
karp5/utility/: container.py
karp_backend/: backend.py  instance_info.py  settings.py
karp_backend/html/: api.md
karp_backend/offline/: create_metadata.py  getmapping.py  upload_offline.py
karp_backend/server/: auth.py  idgenerator.py  searching.py
projects/karp-backend-v5/: pyproject.toml
sb/: clean_lmf.py  jsonlib.py  jsonpathfinder.py  lmflib.py  parsejson.py  saldo_paths.py  tabformat.py  termswefinlib.py  xmldiff.py
sb/converter/: DTD_LMF_REV_16.dtd  convertjson.py  dalintojson.py  htmlconv.py  parsejson.py  termswefin.py
sb/server/: __init__.py  backend.py  external.py  formatdata.py  sb_autoupdates.py  searching.py
skbl/: __init__.py  autoupdates.py  searching.py  skblbackend.py
src/: __init__.py  backend.py  instance_info.py  main.py  main_sb.py
src/converter/: convertjson.py  lexconverter.py  lmftojson.py  mklist.py  pathfinder.py
src/dbhandler/: dbhandler.py  emailsender.py
src/html/: index_dokumentation.html
src/karp/: __init__.py  backend.py
src/karp5/: __init__.py  backend.py  config.py  errors.py  instance_info.py  main.py  models.py  settings.py
src/karp_backend/: __init__.py  backend.py  main.py
src/offline/: create_metadata.py  upload_offline.py
src/server/: auth.py  autoupdates.py  checkdbhistory.py  errorhandler.py  idgenerator.py  log.py  panacea_autoupdates.py  searching.py  searching_export.py  searching_export2.py  suggestions.py  update.py
tests/: _test_config.py  auth_server.py  common_fixtures.py  conftest.py  test_cmp_parser.py  test_factory.py  test_index.py  test_modes.py  test_update_index.py  util.py
tests/api/: test_autocomplete.py  test_explain.py  test_export.py  test_history.py  test_logout.py
tests/cli/: test_es.py  test_upload.py
tests/config/: test_configmanager.py  test_errors.py
tests/parser/: test_parser.py
tests_app/: conftest.py  test_search.py
(+202 files in other folders)
