[metadata]
name = karp-backend-5
summary = Backend for Karp
author = Språkbanken at the University of Gothenburg
author_email = sb-info@svenska.gu.se
maintainer = Språkbanken
maintainer_email = sb-info@svenska.gu.se
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/spraakbanken/karp-backend
project_urls =
    Bug Tracker = https://github.com/spraakbanken/karp-backend/issues
    # Documentation = https://github.
    Source Code = https://github.com/spraakbanken/karp-backend
license = MIT
classifier =
        # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
        Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: Unix
        Operating System :: POSIX
        # Operating System :: Microsoft :: Windows
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: Implementation :: CPython
        # uncomment if you test on these interpreters:
        # 'Programming Language :: Python :: Implementation :: IronPython',
        # 'Programming Language :: Python :: Implementation :: Jython',
        # 'Programming Language :: Python :: Implementation :: Stackless',
        Topic :: Utilities

[files]
packages =
    karp5
data_files =
    karp5/html = karp5/html/*

[extras]
dev =
    black
    bump2version
test =
    pytest
    pytest-cov
    codecov
    elasticsearch_test-py
    pylint
    hypothesis
    attrs>=19.2
    flake8

[tool:pytest]
testpaths = karp5/tests
junit_family = legacy
# addopts = --cov-config=setup.cfg --cov=karp5 --cov-report=term-missing

[coverage:run]
branch = true
source =
    karp5
omit = karp5/tests/*

[pycodestyle]
max-line-length=120

[flake8]
max-line-length=120
