[tool.poetry]
name = "karp-backend-v5"
version = "5.26.4"
description = "Backend for Karp v5"
authors = [
    "Språkbanken at the University of Gothenburg <sb-info@svenska.gu.se>",
    'Kristoffer Andersson <kod.kristoff@gmail.com>',
]
license = "MIT"
readme = "README.md"
homepage = "https://spraakbanken.gu.se"
repository = https://github.com/spraakbanken/karp-backend-v5
classifiers = [
        # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
        "Development Status :: 5 - Production/Stable"
        "Intended Audience :: Developers"
        "License :: OSI Approved :: MIT License"
        "Operating System :: Unix"
        "Operating System :: POSIX"
        "Topic :: Utilities"
]
packages = [
    {include="karp5", from="../.."},
]

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch>=6.1.0,<7.0.0
elasticsearch-dsl>=6.0.0,<7.0.0
Flask
SQLAlchemy
urllib3
six
pymysql
markdown
python-dotenv
sb-json-tools>=0.4.3
json_streams

[tool.poetry.group.dev.dependencies]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/spraakbanken/karp-backend-v5/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
